# cuda-quantum

./: .gitmodules  CMakeLists.txt  failures.txt
.github/workflows/: monitor_prs.yml  renaudk_monitor_prs.yml
include/cudaq/Optimizer/: CMakeLists.txt
include/cudaq/Optimizer/CodeGen/: Passes.td
include/cudaq/Optimizer/Dialect/Quake/: QuakeOps.td
include/cudaq/Optimizer/Transforms/: Passes.td
include/cudaq/Support/: TargetConfig.h
lib/: CMakeLists.txt
lib/Frontend/nvqpp/: ConvertExpr.cpp
lib/Optimizer/Transforms/: CombineQuantumAlloc.cpp
lib/Support/Config/: TargetConfig.cpp
lib/Verifier/: QIRLLVMIRDialect.cpp
python/: CMakeLists.txt
python/cudaq/kernel/: ast_bridge.py  kernel_builder.py
python/cudaq/runtime/: sample.py
python/extension/: CMakeLists.txt
python/runtime/common/: py_ExecutionContext.cpp
python/runtime/interop/: CMakeLists.txt  PythonCppInterop.h
python/tests/interop/: CMakeLists.txt
python/tests/kernel/: test_assignments.py
rt/: CMakeLists.txt  README.md  cudaq.h
rt/cudaq/: CMakeLists.txt  launch.h
rt/tests/: CMakeLists.txt  basic_tester.cpp
runtime/: CMakeLists.txt  cudaq.h
runtime/common/: AnalogRemoteRESTQPU.h  BaseRemoteRESTQPU.h  BaseRemoteSimulatorQPU.h  BaseRestRemoteClient.h  CMakeLists.txt  DeviceCodeRegistry.h  ExecutionContext.h  JIT.cpp  JsonConvert.h  KernelWrapper.h  RemoteKernelExecutor.h  ServerHelper.cpp  ServerHelper.h  SimulationState.h  cudaq_json.h  sample_policy.h
runtime/compiler/: ArgumentConversion.cpp  CMakeLists.txt  CodeGenConfig.cpp  Compiler.cpp  JIT.cpp  LayoutInfo.cpp  RuntimeCppMLIR.cpp  RuntimeMLIR.cpp  RuntimeMLIRCommonImpl.h
runtime/cudaq/: CMakeLists.txt  apply_noise.h  platform.h
runtime/cudaq/algorithms/: evolve_internal.h  get_state.h  run.cpp  run.h  sample.h
runtime/cudaq/builder/: CMakeLists.txt  kernel_builder.cpp  kernel_builder.h  kernel_builder_base.h
runtime/cudaq/domains/chemistry/: CMakeLists.txt  molecule.h
runtime/cudaq/operators/: callback.h
runtime/cudaq/platform/: nvqpp_interface.h  platform_utils.cpp  platform_utils.h  qpu.cpp  qpu.h  qpu_types.h  qpu_utils.cpp  qpu_utils.h  quantum_platform.cpp  quantum_platform.h
runtime/cudaq/platform/default/: CMakeLists.txt  DefaultQPU.h  DefaultQuantumPlatform.cpp
runtime/cudaq/platform/default/python/: QPU.cpp
runtime/cudaq/platform/default/rest/: CMakeLists.txt  RemoteRESTQPU.cpp
runtime/cudaq/platform/default/rest/helpers/anyon/: CMakeLists.txt  anyon.yml
runtime/cudaq/platform/default/rest/helpers/braket/: CMakeLists.txt  braket.yml
runtime/cudaq/platform/default/rest/helpers/infleqtion/: CMakeLists.txt  InfleqtionServerHelper.cpp  infleqtion.yml
runtime/cudaq/platform/default/rest/helpers/ionq/: CMakeLists.txt  ionq.yml
runtime/cudaq/platform/default/rest/helpers/iqm/: CMakeLists.txt  iqm.yml
runtime/cudaq/platform/default/rest/helpers/oqc/: CMakeLists.txt  oqc.yml
runtime/cudaq/platform/default/rest/helpers/qci/: CMakeLists.txt  qci.yml
runtime/cudaq/platform/default/rest/helpers/quantinuum/: CMakeLists.txt  quantinuum.yml
runtime/cudaq/platform/default/rest/helpers/quantum_machines/: CMakeLists.txt  quantum_machines.yml
runtime/cudaq/platform/default/rest/helpers/scaleway/: ScalewayServerHelper.cpp  scaleway.yml
runtime/cudaq/platform/default/rest/helpers/tii/: tii.yml
runtime/cudaq/platform/default/rest_server/: CMakeLists.txt
runtime/cudaq/platform/default/rest_server/helpers/: RestRemoteServer.cpp
runtime/cudaq/platform/fermioniq/: CMakeLists.txt  FermioniqBaseQPU.h  FermioniqQPU.cpp  FermioniqQPU.h  fermioniq.yml
runtime/cudaq/platform/fermioniq/helpers/: CMakeLists.txt  FermioniqServerHelper.cpp
runtime/cudaq/platform/mqpu/: CMakeLists.txt  remote-mqpu.yml
runtime/cudaq/platform/mqpu/custatevec/: CMakeLists.txt  GPUEmulatedQPU.cpp  GPUEmulatedQPU.h
runtime/cudaq/platform/mqpu/helpers/: CMakeLists.txt
runtime/cudaq/platform/mqpu/remote/: CMakeLists.txt  RemoteSimulatorQPU.cpp
runtime/cudaq/platform/orca/: CMakeLists.txt  OrcaExecutor.cpp  OrcaRemoteRESTQPU.cpp  OrcaRemoteRESTQPU.h  OrcaServerHelper.cpp  orca.yml
runtime/cudaq/platform/pasqal/: CMakeLists.txt  PasqalRemoteRESTQPU.cpp  pasqal.yml
runtime/cudaq/platform/quera/: CMakeLists.txt  QuEraRemoteRESTQPU.cpp  quera.yml
runtime/cudaq/ptsbe/: PTSBESample.h
runtime/cudaq/qis/: execution_manager.cpp  execution_manager.h  execution_manager_iface.h  kernel_utils.h  measure_result.h  qubit_qis.h  qudit.h  qvector.h  remote_state.h  state.cpp  state.h  state_data.h
runtime/cudaq/qis/managers/default/: CMakeLists.txt
runtime/cudaq/qis/managers/photonics/: CMakeLists.txt  PhotonicsExecutionManager.cpp
runtime/cudaq/utils/: cudaq_utils.h  owning_ptr.h
runtime/cudaq/version2/: CMakeLists.txt
runtime/cudaq/version2/cudaq/: CMakeLists.txt  device.tar
runtime/cudaq/version2/cudaq/compiler/: CMakeLists.txt  arg_conversion.cpp  arg_conversion.h  compiler.cpp  compiler.h  execution_engine.cpp  execution_engine.h  llvm_module.cpp  llvm_module.h  llvm_module_impl.h  mlir_module.cpp  mlir_module.h  mlir_module_impl.h  opt.cpp  opt.h  translate.cpp  translate.h  utils.cpp  utils.h
runtime/cudaq/version2/cudaq/utils/: string_utils.h
runtime/include/cudaq_internal/compiler/: ArgumentConversion.h  Compiler.h  JIT.h  LayoutInfo.h  RuntimeMLIR.h
runtime/internal/compiler/: Compiler.cpp
runtime/internal/compiler/include/cudaq_internal/compiler/: Compiler.h
runtime/logger/: logger.cpp
runtime/mlir-runtime/: CMakeLists.txt  compiler.cpp  compiler.h
runtime/nvqir/: CircuitSimulator.h
runtime/nvqir/cudensitymat/: CuDensityMatContext.h
runtime/nvqir/resourcecounter/: ResourceCounter.h
runtime/test/: CMakeLists.txt  test_argument_conversion.cpp
scripts/: build_llvm.sh
test/AST-Quake/: bool_literal.cpp
tools/: CMakeLists.txt
tools/nvqpp/: nvq++.in
unittests/: CMakeLists.txt
unittests/Optimizer/: CMakeLists.txt  QuakeSynthTester.cpp
unittests/backends/: CMakeLists.txt
unittests/output_record/: CMakeLists.txt
utils/: CMakeLists.txt
utils/mock_qpu/quantinuum/: __init__.py
(+57 files in other folders)
